--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,13 @@ dependencies:
 
   flutter_riverpod: ^2.5.1
   flutter_hooks: ^0.20.5
+  hooks_riverpod: ^2.5.1
   go_router: ^14.1.1
 
-  firebase_core: ^2.31.0
   firebase_auth: ^4.19.5
   cloud_firestore: ^4.17.3
-  firebase_messaging: ^14.9.2
+  firebase_messaging: ^14.7.5
+  flutter_local_notifications: ^16.1.0
 
   mh_ui: ^0.0.1+5
 
